--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -17,6 +17,8 @@ dependencies:
   dio_cookie_manager: ^3.2.0
   cookie_jar: ^4.0.8
   path_provider: ^2.1.5
+  shared_preferences: ^2.5.3
+  flutter_speed_dial: ^7.0.0
 
 dev_dependencies:
   flutter_test:
