Feature: posts date is now showed, version printing, authwrapper protection, better attachments system

--- a/.env
+++ b/.env
@@ -1,5 +1,6 @@
 API_URL="https://tmp.virtucan.es/api"
-DF_IMG_FULL="https://tmp.virtucan.es/wp-content/uploads/2025/04/bahia-logo.png"
-DF_IMG_LARGE="https://tmp.virtucan.es/wp-content/uploads/2025/04/bahia-logo-1024x576.png"
-DF_IMG_MEDIUM="https://tmp.virtucan.es/wp-content/uploads/2025/04/bahia-logo-300x169.png"
-DF_IMG_THUMBNAIL="https://tmp.virtucan.es/wp-content/uploads/2025/04/bahia-logo-150x150.png"
+APP_VERSION="0.8.0"
+# DF_IMG_FULL="https://tmp.virtucan.es/wp-content/uploads/2025/04/bahia-logo.png"
+# DF_IMG_LARGE="https://tmp.virtucan.es/wp-content/uploads/2025/04/bahia-logo-1024x576.png"
+# DF_IMG_MEDIUM="https://tmp.virtucan.es/wp-content/uploads/2025/04/bahia-logo-300x169.png"
+# DF_IMG_THUMBNAIL="https://tmp.virtucan.es/wp-content/uploads/2025/04/bahia-logo-150x150.png"
