--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,7 +19,7 @@ dependencies:
   path_provider: ^2.1.5
   shared_preferences: ^2.5.3
   flutter_speed_dial: ^7.0.0
-  ticket_widget: ^1.0.2
+  internet_connection_checker_plus: ^2.7.2
 
 dev_dependencies:
   flutter_test:
